log/build_2021-06-01_12-01-48/inv_kinematics_pkg/stderr.log
In file included from /opt/ros/foxy/include/rclcpp/client.hpp:40,
                 from /opt/ros/foxy/include/rclcpp/callback_group.hpp:23,
                 from /opt/ros/foxy/include/rclcpp/any_executable.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/memory_strategy.hpp:24,
                 from /opt/ros/foxy/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/foxy/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:33,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:1:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp: In function ‘void send_vel(std::shared_ptr<interfaces::srv::PlatformVel_Request_<std::allocator<void> > >, std::shared_ptr<interfaces::srv::PlatformVel_Response_<std::allocator<void> > >)’:
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:55:13: error: base operand of ‘->’ has non-pointer type ‘geometry_msgs::msg::Vector3’ {aka ‘geometry_msgs::msg::Vector3_<std::allocator<void> >’}
   55 |       vel_M1->x, vel_M2->x, vel_M3->x, vel_M4->x);
      |             ^~
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:55:24: error: base operand of ‘->’ has non-pointer type ‘geometry_msgs::msg::Vector3’ {aka ‘geometry_msgs::msg::Vector3_<std::allocator<void> >’}
   55 |       vel_M1->x, vel_M2->x, vel_M3->x, vel_M4->x);
      |                        ^~
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:55:35: error: base operand of ‘->’ has non-pointer type ‘geometry_msgs::msg::Vector3’ {aka ‘geometry_msgs::msg::Vector3_<std::allocator<void> >’}
   55 |       vel_M1->x, vel_M2->x, vel_M3->x, vel_M4->x);
      |                                   ^~
/home/javierfr/Tesis_ws/V1/src/inv_kinematics_pkg/src/platform1_vel_server.cpp:55:46: error: base operand of ‘->’ has non-pointer type ‘geometry_msgs::msg::Vector3’ {aka ‘geometry_msgs::msg::Vector3_<std::allocator<void> >’}
   55 |       vel_M1->x, vel_M2->x, vel_M3->x, vel_M4->x);
      |                                              ^~
make[2]: *** [CMakeFiles/platform1_vel_server.dir/build.make:63: CMakeFiles/platform1_vel_server.dir/src/platform1_vel_server.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/platform1_vel_server.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
